fix comment head vertical alignment

--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -225,8 +225,9 @@ a.white
 .flair
   overflow-y: hidden
 
-.thread-info span, .comment-head span
-  vertical-align: top
+// not sure why this vertical-align was set..
+// .thread-info span, .comment-head span
+//   vertical-align: top
 
 .no_underline:hover
   text-decoration: none
